# slakh-pytorch-dataset

./: .gitignore  LICENSE  README.md  calculate_midi_stats.py  notes_histogram.json  pyproject.toml
slakh_dataset/: __init__.py  constants.py  data_classes.py  dataset.py  midi.py
slakh_dataset/splits/: original.json  pitch_bend_info.json  problem_stems.json  redux.json  splits_v2.json
tests/: test_slakh_dataset.py
tests/functional_tests/: test_dataset.py
